--- a/index.html
+++ b/index.html
@@ -3,7 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Seputar Palestine</title>
+    <link rel="stylesheet" href="css\style.css" />
   </head>
-  <body></body>
+  <body>
+    <header id="main-head">
+      <!-- logo -->
+      <div class="logo">
+        <img src="assets\palastine.png" alt="" />
+        <div>
+          <h3><span style="color: rgb(255, 0, 0)">FREE</span>"PALASTINE"</h3>
+        </div>
+      </div>
+      <!-- navbar -->
+      <div class="topnav">
+        <div class="topnav-right">
+          <a href="#home">Home</a>
+          <a href="#history">History</a>
+          <a href="#about">About</a>
+          <a href="#message">Message</a>
+        </div>
+      </div>
+    </header>
+    <hr />
+    <!--Section Home-->
+    <section>
+      <header class=>
+        <h2 id="home"> Welcome to My Website, <span id="name">_____ </span> ! </h2>
+      </header>
+      <article>
+        <!--photo banner-->
+        <div class="photo-banner"> </div>
+      </article>
+  </section>
+
+  </body>
+  <script src="js\script.js"></script>
 </html>
