--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Seputar Palestine</title>
     <link rel="stylesheet" href="css\style.css" />
   </head>
+
   <body>
+    <!-- logo & navbar -->
     <header id="main-head">
       <!-- logo -->
       <div class="logo">
@@ -20,23 +22,88 @@
         <div class="topnav-right">
           <a href="#home">Home</a>
           <a href="#history">History</a>
-          <a href="#about">About</a>
           <a href="#message">Message</a>
         </div>
       </div>
     </header>
     <hr />
-    <!--Section Home-->
-    <section>
-      <header class=>
-        <h2 id="home"> Welcome to My Website, <span id="name">_____ </span> ! </h2>
-      </header>
-      <article>
-        <!--photo banner-->
-        <div class="photo-banner"> </div>
-      </article>
-  </section>
 
+    <!-- Konten -->
+    <main>
+      <!--section home-->
+      <section id="home">
+        <header>
+          <h2>Welcome to My Website, <span id="name"> Bageur </span>!</h2>
+        </header>
+
+        <article>
+          <!--photo banner-->
+          <div class="slide">
+            <div class="slides">
+              <img src="assets\Gambar1.jpg" alt="Gambar 1" />
+              <img src="assets\Gambar2.jpg" alt="Gambar 2" />
+              <img src="assets\Gambar3.jpg" alt="Gambar 3" />
+              <img src="assets\Gambar2.jpg" alt="Gambar 4" />
+            </div>
+          </div>
+        </article>
+      </section>
+
+      <!-- section history -->
+      <section id="history">
+        <header>
+          <h1 class="title">History</h1>
+          <p>
+            Terletak strategis di antara tiga benua, wilayah Palestina (juga
+            dikenal sebagai Tanah Israel dan Tanah Suci) memiliki sejarah yang
+            penuh gejolak sebagai persimpangan agama, budaya, perdagangan, dan
+            politik. Palestina adalah tempat kelahiran Yudaisme dan Kristen, dan
+            telah dikuasai oleh banyak kerajaan dan kekuatan, termasuk Mesir
+            Kuno, Israel Kuno dan Yehuda, Kekaisaran Persia, Alexander Agung dan
+            penerusnya, Hasmonean, Kekaisaran Romawi, beberapa kekhalifahan
+            Muslim, dan tentara salib. Di zaman modern, wilayah tersebut
+            dikuasai oleh Kesultanan Utsmaniyah, kemudian Kerajaan Inggris, dan
+            sejak tahun 1948 telah terbagi menjadi Israel, Tepi Barat, dan Jalur
+            Gaza.
+          </p>
+
+          <p>
+            Peta administrasi wilayah Israel dan Palestina sudah mengalami
+            banyak perubahan sejak 70 tahun terakhir. Kondisi dua wilayah sangat
+            berbeda dari dulu dan sekarang, khususnya dari segi luas,
+            lingkungan, dan akses. Perbedaan kondisi Israel dan Palestina ini
+            bermula sejak konflik perebutan wilayah kedua negara usai Perang
+            Dunia II. Lantas, bagaimana peta Israel dan Palestina saat ini serta
+            bagaimana kondisinya dulu dan sekarang?
+          </p>
+        </header>
+
+        <article>
+          <div class="peta">
+            <img src="assets\Peta Palastine.jpg" alt="Peta Palastine" />
+          </div>
+          <p>
+            Jika dulu wilayah Israel hanya berada di bagian utara Palestina,
+            maka saat ini Israel menguasai hampir 90 persen wilayah
+            Palestina.Saat ini, warga Palestina hanya mendiami wilayah Tepi
+            Barat dan Jalur Gaza saja. Tak hanya itu, banyak warga Israel yang
+            membangun pemukiman yang dianggap ilegal di kedua kawasan tersebut.
+          </p>
+          <p class="quotes">
+            Jangan Sekali-kali Meninggalkan Sejarah.<br /><b>Ir. Soekarno </b>
+          </p>
+        </article>
+      </section>
+
+      <!-- section message -->
+      <section id="message">
+        <header>
+          <h2>Message</h2>
+        </header>
+
+        <article></article>
+      </section>
+    </main>
   </body>
   <script src="js\script.js"></script>
 </html>
